--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="body-container">
-        <div class="img-container">
-            
-        </div>
+            <img src="./images/image.jpg" alt="">
         <div class="text-container">
             <h1>here is my birthday</h1>
             <h4>My birthday is on <span id="birthdayDate"> wednesday, 11 august 2021, 12:00 AM </span></h4>
